implement getAll_shouldFetchAllRecords_withQueryBuilder test